src/objects/Integration_Details__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Content_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Content Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Endpoint__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Method__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Timeout__c</fullName>
        <label>Timeout</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Integration Details</label>
</CustomObject>